# classic-basic

./: .gitignore  CMakeLists.txt
src/: main.c
src/basic_lib/: basic_graphics.h  basic_math.h
src/helpers/: compilers.h  print_info.c  print_info.h
src/interpreter/: interpreter.c  interpreter.h  node.c  node.h
src/tokenizer/: file_io.c  file_io.h  token.h  tokenizer.c  tokenizer.h
